# svelte-route-builder

./: Cargo.toml  Routes.json  Routes.toml  example.ts  example_edit.ts
src/: main.rs  swc_test.rs
