[package]
name = "svelte-route-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
toml = "0.8.12"
rand = "0.8.5"

swc_common ={ version = "0.33.26", features = ["tty-emitter"]}
swc_ecma_parser = "0.144.1"
swc_ecma_ast = "0.113.2"
swc_ecma_visit = "0.99.1"
swc_ecma_codegen = "0.149.1"